# Rutile

./: .clang-format  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_LINUX.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_STYLE.md  README.md  SHADERS.md  SPEC.html  vcpkg.json
RTSL/: .clang-format  CMakeLists.txt  README.md  architecture.md  spec.md  vcpkg.json
RTSL/backends/: CMakeLists.txt
RTSL/backends/include/: rtsl_hlsl_backend.hpp
RTSL/bindings/: README.md
RTSL/bindings/c/: CMakeLists.txt
RTSL/cmake/: Rtsl.cmake
RTSL/docs/: artifacts.md  backend-contract.md  compiler-architecture.md  language.md  linking.md  rtir.md
RTSL/include/: rtsl-spirv.hpp
RTSL/package/: CMakeLists.txt
RTSL/package/include/: rtslp_package.hpp
RTSL/package/src/: rtslp_package.cpp
RTSL/scripts/: build.bat  build.sh  test.bat
RTSL/src/: artifact.cpp  artifact.hpp  ast.hpp  basic_diagnostics.cpp  basic_diagnostics.hpp  basic_source_manager.cpp  basic_source_manager.hpp  binary.hpp  compiler.cpp  compiler.hpp  ir.cpp  ir.hpp  language_service.cpp  language_service.hpp  lexer.cpp  lexer.h  lexer.hpp  linker.cpp  linker.hpp  mangler.cpp  mangler.hpp  package.cpp  package.hpp  parser.cpp  parser.hpp  rtsl.cpp  rtsl.hpp  rtslc.cpp  sema.cpp  sema.hpp  source_location.hpp  spirv_emitter.cpp  stage_builtins.cpp  stage_builtins.hpp  text_rtir.cpp  text_rtir.hpp  token.hpp  types.hpp  uniform_lowering.cpp  uniform_lowering.hpp
RTSL/src/AST/: AST.hpp
RTSL/src/Backend/: GlslBackend.cpp  GlslBackend.hpp
RTSL/src/Basic/: Diagnostics.cpp  Diagnostics.hpp  SourceManager.cpp  SourceManager.hpp  Types.hpp
RTSL/src/Compiler/: Compiler.cpp  Compiler.hpp
RTSL/src/Driver/: rtslc.cpp
RTSL/src/Emit/: SpirvEmitter.cpp  SpirvEmitter.h  SpirvEmitter.hpp
RTSL/src/IR/: IR.cpp  IR.hpp  StageBuiltins.cpp  StageBuiltins.hpp  UniformLowering.cpp  UniformLowering.hpp
RTSL/src/Lex/: Lexer.cpp  Lexer.h  Lexer.hpp  Token.hpp
RTSL/src/Link/: Linker.cpp  Linker.hpp
RTSL/src/Mangle/: Mangler.cpp  Mangler.hpp
RTSL/src/Parse/: Parser.cpp  Parser.hpp
RTSL/src/Sema/: Sema.cpp  Sema.hpp
RTSL/src/Serialization/: Artifact.cpp  Artifact.hpp  TextRTIR.cpp  TextRTIR.hpp
RTSL/tests/: rtsl_tests.cpp
RTSL/tools/Rtsl.LanguageServer/: Program.cs  Rtsl.LanguageServer.csproj
RTSL/tools/Rtsl.VisualStudio/: Rtsl.VisualStudio.sln
RTSL/tools/vs-rtsl-ext/: RtslClassificationFormats.cs  RtslClassificationNames.cs  RtslClassifier.cs  RtslContentType.cs  source.extension.vsixmanifest  vs-rtsl-ext.csproj  vs-rtsl-ext.sln
RTSL/workspace/: _min.rtsl  advanced.rtsl  graphics.rtsl
backend-tools/: CMakeLists.txt
backend-tools/src/: shader_translation.cpp
backends/rt-gl33/: CMakeLists.txt
backends/rt-gl33/src/: config.h  context.c  context.h  core.c  core.h  error.c  types.h
bindings/c/: CMakeLists.txt
bindings/c/include/: rt_ext_compute.h  rt_ext_glfw.h  rt_ext_swapchain.h  rutile.h
example/: CMakeLists.txt
example/00-triangle/: CMakeLists.txt  main.cpp
example/01-textured-quads/: main.cpp
example/02-compute-buffer/: main.cpp
example/03-heat-diffusion/: main.cpp
example/04-heat-diffusion-edges/: main.cpp
example/05-voxel-engine/: main.cpp  world.cpp
example/06-galaxy/: main.cpp
example/07-plasma-lab/: main.cpp
example/08-fluid-simulation/: CMakeLists.txt  main.cpp
example/compute/: CMakeLists.txt  main.cpp
example/first/: CMakeLists.txt  main.cpp
example/galaxy/: CMakeLists.txt  main.cpp
example/heat-diffusion/: CMakeLists.txt  main.cpp
example/heat-diffusion-edges/: CMakeLists.txt  main.cpp
example/minecraft/: CMakeLists.txt  main.cpp
example/plasma-lab/: CMakeLists.txt  main.cpp
example/rt-fluid-simulation/: CMakeLists.txt  main.cpp
example/triangle/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/00-triangle/: CMakeLists.txt  main.cpp  rtsl_embed.hpp  triangle.rtsl  triangle.rtslp
examples/01-textured-quads/: CMakeLists.txt  main.cpp  rtsl_embed.hpp  textured_quads.rtsl  textured_quads.rtslo  textured_quads.rtslp
examples/01-triangle/: CMakeLists.txt  main.cpp  triangle.rtsl
examples/02-compute-buffer/: CMakeLists.txt  main.cpp
examples/02-spinning-cube/: CMakeLists.txt  cube.rtsl  main.cpp
examples/03-heat-diffusion/: main.cpp
examples/03-plasma-lab/: CMakeLists.txt  main.cpp  plasma.rtsl
examples/04-galaxy/: CMakeLists.txt  galaxy.rtsl  main.cpp
examples/04-heat-diffusion-edges/: main.cpp
examples/05-voxel-engine/: CMakeLists.txt  main.cpp  world.cpp  world.h
examples/05-voxel-renderer/: CMakeLists.txt  main.cpp  terrain.rtsl  water.rtsl
examples/06-galaxy/: CMakeLists.txt  main.cpp
examples/07-plasma-lab/: CMakeLists.txt  main.cpp
examples/deprecated/: README.md
examples/deprecated/heat-diffusion/: CMakeLists.txt  main.cpp
examples/deprecated/heat-diffusion-edges/: CMakeLists.txt  main.cpp
examples/shared/: cli.hpp  util.h  util.hpp
rt-dx12/: CMakeLists.txt
rt-dx12/src/: context.cpp  context.h  core.h  error.cpp  error.h  types.h
rt-dx12/src/resource/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  framebuffer.cpp  framebuffer.h  graphics_program.cpp  graphics_program.h  queue.cpp  resource.cpp  swapchain.cpp  texture.cpp
rt-gl33/: CMakeLists.txt
rt-validation/: CMakeLists.txt
rt-validation/src/: buffer.c  buffer.h  command_buffer.c  compute_program.c  compute_program.h  core.c  entry.c  framebuffer.c  framebuffer.h  graphics_program.c  logger.c  logger.h  procs.h  queue.c  state.c  swapchain.c  swapchain.h  texture.c  texture.h  types.h
runtime/: CMakeLists.txt
runtime/backend-tools/: CMakeLists.txt
runtime/backend-tools/src/: rtslp_package.cpp
runtime/backends/: CMakeLists.txt
runtime/backends/dx12/: CMakeLists.txt
runtime/backends/rt-directx12/: CMakeLists.txt
runtime/backends/rt-dx12/: CMakeLists.txt
runtime/backends/rt-gl33/: CMakeLists.txt
runtime/backends/rt-opengl/: CMakeLists.txt
runtime/backends/rt-vk13/: CMakeLists.txt  README.md
runtime/backends/rt-vulkan/: CMakeLists.txt
runtime/common/: sync.h
runtime/layers/: CMakeLists.txt
(+456 files in other folders)
